[package]
name = "sc-finality-jasmine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
dyn-clone = "1.0"
fork-tree = { version = "3.0.0", path = "../../utils/fork-tree" }
futures = "0.3.21"
futures-timer = "3.0.1"
log = "0.4.8"
parking_lot = "0.12.0"
rand = "0.8.4"
ahash = "0.7.6"
parity-scale-codec = { version = "3.0.0", features = ["derive"] }
sp-application-crypto = { version = "6.0.0", path = "../../primitives/application-crypto" }
sp-arithmetic = { version = "5.0.0", path = "../../primitives/arithmetic" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" }
sc-chain-spec = { version = "4.0.0-dev", path = "../../client/chain-spec" }
sc-utils = { version = "4.0.0-dev", path = "../utils" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
sc-consensus = { version = "0.10.0-dev", path = "../consensus/common" }
sp-core = { version = "6.0.0", path = "../../primitives/core" }
sp-keystore = { version = "0.12.0", path = "../../primitives/keystore" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sc-telemetry = { version = "4.0.0-dev", path = "../telemetry" }
sc-keystore = { version = "4.0.0-dev", path = "../keystore" }
serde_json = "1.0.79"
sc-client-api = { version = "4.0.0-dev", path = "../api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sc-network = { version = "0.10.0-dev", path = "../network" }
sc-network-gossip = { version = "0.10.0-dev", path = "../network-gossip" }
sp-finality-jasmine = { version = "0.1.0", path = "../../primitives/finality-jasmine" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.10.0-dev" }
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" }
finality-jasmine = { version = "0.1", features = ["derive-codec"] }
async-trait = "0.1.50"

[dev-dependencies]
assert_matches = "1.3.0"
finality-jasmine = { version = "0.1", features = [
    "derive-codec",
    "test-helpers",
] }
sc-network = { version = "0.10.0-dev", path = "../network" }
sc-network-test = { version = "0.8.0", path = "../network/test" }
sp-keyring = { version = "6.0.0", path = "../../primitives/keyring" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
sp-tracing = { version = "5.0.0", path = "../../primitives/tracing" }
tokio = "1.15"
tempfile = "3.1.0"
